fix double scrollbar for #941

--- a/stylus/Flare/landing-page.styl
+++ b/stylus/Flare/landing-page.styl
@@ -44,6 +44,11 @@
   padding: 0 0.5em 0.5em
   text-align: center
 
+  p
+    display:block
+    width: $fullwidth
+    font-size: 0.75em
+
   ul
     list-style-type: none
     list-style-position: outside
